# rust-actix-angular-example

./: LICENSE  README.md
actix-backend/: Cargo.toml
actix-backend/src/: main.rs
angular-ui/: angular.json  package-lock.json  package.json
angular-ui/src/app/: app-routing.module.ts  app.component.ts  app.module.ts
angular-ui/src/app/detail/: detail.component.html  detail.component.ts
angular-ui/src/app/home/: home.component.html
angular-ui/src/app/introduction/: introduction.component.html  introduction.component.ts
angular-ui/src/app/page-not-found/: page-not-found.component.html
