[package]
name = "actix-backend"
version = "0.1.0"
authors = ["hei"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.1.4"
actix-session = "0.2.0"
actix-web = "1.0.5"
log = "0.4.8"
env_logger = "0.6.2"
